<resources>
    <string name="app_name">Pree</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>

    <string name="kamp">Amplify: %s</string>
    <string name="lim">Cutting: %s</string>
    <string name="cut_l">Low border: %s</string>
    <string name="cut_h">High border: %s</string>
    <string name="pitch">Pitch offset: %s</string>
    <string name="qu">Quantizing: %s</string>
    <string name="reset_def">Reset</string>

</resources>